--- a/webpage/index.html
+++ b/webpage/index.html
@@ -83,13 +83,10 @@
                     </div>
                     <div :style="`display: ${step==2?'block':'none'};`">
                         <h4 class="alert-heading">Step 3. Try scrolling ~</h4>
-                        <p>스크롤을 움직이면 선택한 두 폰트의 학습된 잠재공간의 사진을 볼 수 있어요</p>
                     </div>
                     <div :style="`display: ${step==3?'block':'none'};`">
                         <h4 class="alert-heading">Step 4. You created a new style. </h4>
                         <hr>
-                        <p class="mb-0">좋은 프로젝트였다고 생각되시면 Github star 눌러주세요 ~</p>
-                        <a class="github-button" href="https://github.com/sju-coml/2020-Font-picker" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star sju-coml/2020-Font-picker on GitHub">Star</a>
                     </div>
                 </div>
 
@@ -193,7 +190,7 @@
                 char: "A",
                 pick: 0,
                 paction: 0,
-                path: "http://4f9a1e75ad61.ngrok.io",
+                path: "",
                 gifUrl: "https://github.com/HinaUsagiNote/HinaUsagiNote.github.io/blob/master/images/A.gif?raw=true"
             },
             computed: {
